14 May 2004 Sylvain Pion
- Remove unused variables generating warnings.

26 March 2004 Radu Ursu
-made doc work with the current implementation of the Manual tools

10 February 2004 Radu Ursu
-Updated headers in examples

1.62 (8 October 2003) [af]
- Made two non-template functions inline to avoid multiple definitions 

1.61 (30 September 2003) [af]
- Moved \chapter to main.tex

1.60 (19 September 2003) [af]
- New license headers

1.59 (17 Sep 2003) [af]
- Removed Polygon_traits

1.58 (16 Sep 2003) [af]
- Replaced global functions by kernel functors

1.57 (16 Se 2003) [af]
- Removed Polygon_traits from the testsuite

1.56 (13 Sep 2003) [af]
- Removed Polygon_traits as CGAL kernels implement the concept PolygonTraits
- Removed leda_integer, GMP, as well as double from the examples

1.55 (10 Sep 2003) [rursu]
- Qt_help_window is in the CGAL namespace now

1.54 (07 Sep 2003) [rursu]
- demo use now the new help class Qt_help_window instead of HelpWindow
- demo use now the new demo icon demoicon

1.53 (11 July 2003) [af]
- Replaced wrong #ifdef

1.52 (10 July 2003) [af]
- Added missing typename
- Made it work on Sun Pro which disables member template functions

1.51 (28 June 2003) [rursu]
- fixed demo/Partition_2/makefile for FreeBSD

1.50
- Bugfix: Replaced one more occurence of  Circulator_list with std::vector
1.49 (20 June 2003)
- fix version file.

1.48 (20 June 2003)
  - Fixes for HTML index.

1.47 (20 June 2003) [ru]
  -replaced Leda_window based demo with Qt_widget based demo

1.46 (11 June 2003) [af]
- Got rid of class Circulator_list 
- Use std::vectgor and not std::list as  std::list<T>::sort() is not available on Sun CC

1.45 (6 June 2003)
- doc fixes.

1.44 (5 Mai 2003)
 - use defaults to instantiate Constrained_triangulation_2 in partition_approx_convex_2 in order to
   compile with new design of triangulations
 - apply Radu patch to get read of MACRO for VC++

1.43 (12 Apr 2003)
  - comment is_valid() since it's not finished and breaks g++ 3.4.
